# dz_19.2

./: README.md  catalog.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/templates/: contact_detail.html  contact_list.html  home.html  product_detail.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templates/skyforms/: home.html
config/: settings.py
